--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -1,7 +1,7 @@
 <Window x:Class="BMIApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BMI Kalkulator" Height="600" Width="400"
+        Title="BMI Kalkulator" Height="800" Width="400"
         Background="#FFF0F5">
     <StackPanel Margin="20" VerticalAlignment="Center">
         <TextBlock Text="BMI Kalkulator" FontSize="20" FontWeight="Bold" Foreground="HotPink" HorizontalAlignment="Center" Margin="0,0,0,20"/>
@@ -23,9 +23,22 @@
         <Label Content="Wzrost (stopy)" Foreground="DeepPink"/>
         <TextBox x:Name="HeightFeetTextBox" Margin="0,5"/>
 
+        <Label Content="Plec" Foreground="DeepPink"/>
+        <RadioButton GroupName="Gender" Content="Kobieta" IsChecked="True" />
+        <RadioButton GroupName="Gender" Content="Mezczyzna" />
+
+        <Label Content="Obwod talii(cm)" Foreground="DeepPink"/>
+        <TextBox x:Name="WaistCmTextBox" Margin="0,5"/>
+
+        <Label Content="Obwod bioder(cm)" Foreground="DeepPink"/>
+        <TextBox x:Name="HipsCmTextBox" Margin="0,5"/>
+
         <Button Content="Oblicz BMI" Click="CalculateBMI_Click" Background="HotPink" Foreground="White" Margin="0,10"/>
+        
         <TextBlock x:Name="ResultTextBlock" FontSize="16" Foreground="DeepPink" TextAlignment="Center"/>
         <TextBlock x:Name="TipTextBlock" FontSize="14" Foreground="DeepPink" TextAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap"/>
+        <TextBlock x:Name="WHRResultTextBlock" FontSize="16" Foreground="DeepPink" TextAlignment="Center"/>
+        <TextBlock x:Name="BMRResultTextBlock" FontSize="14" Foreground="DeepPink" TextAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap"/>
 
     </StackPanel>
 </Window>
